# ChArUcoBoardExp

./: .gitattributes  .gitignore  AGENTS.md  README.md  aruco_box.py  boom.ipynb  calculate_box_coord_naive.ipynb  cali.py  capture.py  compute_3d_maybe.ipynb  cvt_all_pdfs.sh  draw.ipynb  draw_uv.ipynb  dump_and_play.sh  estimate_extrinstic.ipynb  find_aruco_points.py  find_aruco_points_with_image.ipynb  find_cute_box.py  find_cute_box_with_image.ipynb  find_cute_object.py  find_extrinsic_object.py  gen.sh  get_ext.ipynb  interactive_example.py  new_try.ipynb  play.ipynb  playground.py  preprocess_camera_parameters.ipynb  pyproject.toml  run_capture.py  test.py  test_cam_props.py  videos.toml
docs/: dlt.md
output/: a-ae_08.parquet  ae_08.parquet  af_03.parquet  b-af_03.parquet  calibration.parquet  object_points.parquet  params.parquet  standard_box_markers.parquet  usbcam_cal.parquet
pose/: a.parquet  b.parquet
sample/: standard_box.glb
scripts/: uv_to_object_points.py
