[project]
name = "charuco-board-exp"
version = "0.1.0"
description = "ChArUco and ArUco calibration/pose experiments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "awkward>=2.8.4",
  "click>=8.1.8",
  "jaxtyping>=0.3.2",
  "loguru>=0.7.3",
  "numpy>=2.2.3",
  "opencv-python>=4.11.0.86",
  "orjson>=3.10.15",
  "trimesh>=4.6.4",
]

[dependency-groups]
dev = [
  "jupyterlab>=4.5.3",
  "pytest>=8.3.4",
  "ruff>=0.9.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["."]
